// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrSeparator (snapshot) > custom label matches snapshot 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="flex items-center gap-3 py-1"
    role="separator"
  >
    <div
      class="h-px flex-1 bg-border"
    />
    <span
      class="text-[11px] uppercase tracking-[0.08em] text-muted-foreground"
    >
      sign in manually
    </span>
    <div
      class="h-px flex-1 bg-border"
    />
  </div>
</div>
`;

exports[`OrSeparator (snapshot) > default label matches snapshot 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="flex items-center gap-3 py-1"
    role="separator"
  >
    <div
      class="h-px flex-1 bg-border"
    />
    <span
      class="text-[11px] uppercase tracking-[0.08em] text-muted-foreground"
    >
      or
    </span>
    <div
      class="h-px flex-1 bg-border"
    />
  </div>
</div>
`;
